fixed font size on smallest resolution

--- a/css/main.css
+++ b/css/main.css
@@ -196,6 +196,10 @@ footer {
     display: block;
     margin: 0 auto;
   }
+
+  #education h4 {
+    font-size: 1.3em;
+  }
 }
 
 @media all and (min-width: 800px) {
